# seinventor

./: CMakeLists.txt  base.cpp  base.hpp  main.cpp  number.cpp  number.hpp
src/: CMakeLists.txt
